2009-01-08  Thomas Heller  <theller@ctypes.org>

	* The codegenerator now uses ctypes sized int and uint types
	for the sized integers <from stdint.h>.

2009-01-08  Thomas Heller  <theller@python.net>

	* setup.py: Correct the version number.  Remove the 'zip_safe'
	argument in the setup call; it was left over from setuptools
	experiments.

	* On Windows, the codegenerator uses WinDLL instead of CDLL so
	that functions with stdcall mangled names can be loaded.
	Use the correct registry key to find gccxml.

2008-10-20  Thomas Heller  <theller@ctypes.org>

	* Remove the import of setuptools in the setup.py script.

	* Add support for float and double constants and variables.

	* Fix structure support.  Patch from Shalabh Chaturvedi.

2008-02-01  Thomas Heller  <theller@ctypes.org>

	* Include the variable initializers in the generated code (in a
	comment).

	* Change version number to 0.5.6.  Also, the version number is now
	available as 'ctypeslib.__version__'.

	* Make the codegenerator compatible with gccxml 0.9.0.
	
	* Move the calculation of initializers into a separate class; this
	makes it easier to customize the behaviour depending on the
	initializer type.
	
2008-01-24  Thomas Heller  <theller@python.net>

	* Fix the codegenerator to handle structures without fields; it
	did fail to calculate the packing.

2007-04-11  Thomas Heller  <theller@python.net>

	* Add a 'compilerflags' optional argument to the include()
	function.  This allows to specify the compilerflags for h2xml when
	the code is 'compiled'.  Default is 'compilerflags=["-c"]' which
	will include #define constants.

2007-03-01  Thomas Heller  <theller@python.net>

	* Applied a patch from Michal J. Gajda: This patch adds the
	--preload option to xml2py.py to resolve missing references from
	DLLs.  See
	http://sourceforge.net/tracker/?func=detail&aid=1670758&group_id=71702&atid=532156

	* Added ctypeslib.contrib.pythonhdr module, by Lenard Lindstrom: